--- a/GET-POST/Shipper/HomeShipper/StorageScreen/View/StorageViewController.storyboard
+++ b/GET-POST/Shipper/HomeShipper/StorageScreen/View/StorageViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KlG-1B-EKH">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Storage View Controller-->
         <scene sceneID="QGs-iH-2sc">
             <objects>
-                <viewController storyboardIdentifier="storageViewController" id="KlG-1B-EKH" customClass="StorageViewController" customModule="GET_POST" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="KlG-1B-EKH" customClass="StorageViewController" customModule="GET_POST" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qwG-Jl-gRX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
