--- a/GET-POST/Shipper/HomeShipper/TabBarShipperAndShop.storyboard
+++ b/GET-POST/Shipper/HomeShipper/TabBarShipperAndShop.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home Shipper-->
+        <!--Tab Bar Shipper And Shop-->
         <scene sceneID="5Xh-8X-MTp">
             <objects>
-                <viewController storyboardIdentifier="HomeShipper" id="gvX-iY-juv" customClass="HomeShipper" customModule="GET_POST" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TabBarShipperAndShop" id="gvX-iY-juv" customClass="TabBarShipperAndShop" customModule="GET_POST" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0bl-zA-7d7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
