--- a/GET-POST/Shipper/Login/Login1.storyboard
+++ b/GET-POST/Shipper/Login/Login1.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wmS-rp-isD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3St-Hc-R83">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,10 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" alpha="0.55000000000000004" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sea-city-sunset-316902" translatesAutoresizingMaskIntoConstraints="NO" id="BXe-JX-N4k">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wbc-Cj-dIJ" userLabel="ViewLogo">
-                                <rect key="frame" x="134.5" y="142" width="106" height="47"/>
+                                <rect key="frame" x="134.5" y="98" width="106" height="47"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yXr-dT-v7l">
                                         <rect key="frame" x="0.0" y="0.0" width="106" height="29"/>
@@ -63,7 +63,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KUf-w4-Cpk">
-                                <rect key="frame" x="42" y="259" width="291" height="19"/>
+                                <rect key="frame" x="42" y="215" width="291" height="19"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Số điện thoại">
                                         <attributes>
@@ -77,14 +77,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BF4-sK-Mxv">
-                                <rect key="frame" x="42" y="328" width="291" height="1"/>
+                                <rect key="frame" x="42" y="284" width="291" height="1"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="uBj-hA-e35"/>
                                 </constraints>
                             </view>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nhập số điện thoại của bạn" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="GQD-ay-mKU">
-                                <rect key="frame" x="58" y="300" width="291" height="23"/>
+                                <rect key="frame" x="58" y="256" width="291" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="23" id="Fs1-4C-uJx"/>
                                 </constraints>
@@ -98,7 +98,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRA-wm-lkb">
-                                <rect key="frame" x="42" y="359" width="67.5" height="19"/>
+                                <rect key="frame" x="42" y="315" width="67.5" height="19"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Mật khẩu">
                                         <attributes>
@@ -111,7 +111,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Mật khẩu" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="9AG-6R-s7s">
-                                <rect key="frame" x="58" y="397" width="291" height="23"/>
+                                <rect key="frame" x="58" y="353" width="291" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="23" id="9df-3f-uem"/>
                                 </constraints>
@@ -126,7 +126,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y08-GC-jue">
-                                <rect key="frame" x="42" y="471" width="291" height="42"/>
+                                <rect key="frame" x="42" y="427" width="291" height="42"/>
                                 <color key="backgroundColor" red="0.30588235294117649" green="1" blue="0.27058823529411763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="dy2-Nt-UmE"/>
@@ -175,7 +175,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="urq-Zp-i0O">
-                                <rect key="frame" x="40" y="249" width="295" height="0.0"/>
+                                <rect key="frame" x="40" y="205" width="295" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="0.17384537310000001" blue="0.2091111068" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -186,18 +186,18 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lpa-zc-4EY">
-                                <rect key="frame" x="42" y="420" width="291" height="1"/>
+                                <rect key="frame" x="42" y="376" width="291" height="1"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="qAm-5w-kIh"/>
                                 </constraints>
                             </view>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="RXj-0f-3l2">
-                                <rect key="frame" x="169" y="347" width="37" height="37"/>
+                                <rect key="frame" x="169" y="325" width="37" height="37"/>
                                 <color key="color" red="0.30588235289999999" green="1" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Omo-ly-3WJ">
-                                <rect key="frame" x="42" y="533" width="291" height="35.5"/>
+                                <rect key="frame" x="42" y="489" width="291" height="79.5"/>
                                 <color key="tintColor" red="0.95294117649999999" green="0.31764705879999999" blue="0.31764705879999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal">
                                     <attributedString key="attributedTitle">
@@ -268,24 +268,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tRb-UP-Gx9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1040.8" y="112.89355322338831"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="QCq-ts-KDp">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wmS-rp-isD" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GXr-Ae-UGQ">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="3St-Hc-R83" kind="relationship" relationship="rootViewController" id="Ef5-Cy-6vf"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="H0o-Yq-Pbs" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="101.59999999999999" y="112.89355322338831"/>
         </scene>
     </scenes>
     <resources>
